--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
 .DS_Store
-coverage/
+Thumbs.db
+
+# IDE settings
 .vscode/
 .idea/
+
+# Testing
+coverage/
+
+# Claude Code settings (local config only)
+.claude/
+
+# Project instructions (internal use)
+skill.md
