feat: Complete Commercial Layer and Production Deployment Package
This commit includes three major feature sets:

## 1. Production Hardening (5 Modules - 100% Complete)

Module 1: Security
- Add prompt injection detection (10+ patterns)
- Implement input sanitization (2000 char limit, null bytes)
- Add multi-tenant validation (validateLeadOwnership)
- Enforce message cap (10 per session)
- Audit all SQL queries for customer_id

Module 2: Reliability
- Add timezone support (IANA identifiers)
- Enforce office hours (8 AM - 8 PM local time)
- Update Ghost Buster with timezone awareness
- Update Weekly Digest with timezone enforcement

Module 3: Logic
- Add math validation utilities (mathValidation.ts)
- Implement dimension extraction from natural language
- Add area calculation validation (5% tolerance)
- Auto-correct dimension mismatches (e.g., 10x10 = 500sqft → 100sqft)
- Add math_correction_flag to responses

Module 4: Performance
- Add sendHomeownerConfirmation() method
- Send professional email to visitor after quote
- Log confirmations in database

Module 5: Testing
- Add 4 comprehensive sad path tests (total: 7 E2E tests)
- Test cross-tenant security
- Test timezone enforcement
- Test math correction
- Test prompt injection defense

## 2. Production Deployment Package

Docker Configuration:
- Add multi-stage Dockerfile (builder + production)
- Add docker-compose.yml (Node + PostgreSQL)
- Add docker-compose.dev.yml (hot-reload)
- Add .dockerignore optimization
- Configure non-root user security

Health Check System:
- Add comprehensive health check route (DB + Anthropic API)
- Add Kubernetes readiness probe
- Add Kubernetes liveness probe
- Track response times

CI/CD Pipeline:
- Add GitHub Actions workflow (.github/workflows/deploy.yml)
- Configure E2E test suite in CI
- Add security scanning (Trivy)
- Configure Docker build and push to GHCR
- Add optional deployment step

Configuration & Documentation:
- Add config/env.production.example (70+ variables)
- Add D

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "get-key": "tsx src/scripts/update-seed-with-key.ts",
     "test:estimate": "tsx tests/estimate.test.ts",
     "test:hot-lead": "tsx src/scripts/test-hot-lead.ts",
-    "test:digest": "tsx src/scripts/test-weekly-digest.ts"
+    "test:digest": "tsx src/scripts/test-weekly-digest.ts",
+    "test:e2e": "tsx tests/e2e_scenarios.test.ts"
   },
   "keywords": [],
   "author": "",
